[project]
name = "pasarguard"
version = "2.2.4"
description = "A modern async Python client for the Pasarguard API with typed models and full admin automation support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["pasarguard", "api", "async", "httpx", "pydantic"]
dependencies = [
    "datetime>=5.5",
    "httpx[socks]>=0.28.1",
    "pydantic>=2.4.1,<2.14",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=4.0.0",
    "sshtunnel>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/AmirKenzo/pasarguard_api"
Repository = "https://github.com/AmirKenzo/pasarguard_api"
Documentation = "https://github.com/AmirKenzo/pasarguard_api#readme"
Issues = "https://github.com/AmirKenzo/pasarguard_api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pasarguard"]

# ----------------- Ruff ----------------- #
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes: unused imports, undefined names, etc.
    "I",      # isort: import sorting
    "UP",     # pyupgrade: modern Python syntax
    "B",      # flake8-bugbear: common bugs
    "ASYNC",  # async/await common mistakes
    "C4",     # comprehensions improvements
    "SIM",    # simplify code
    "RET",    # return statement improvements
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # allow function calls in default args when project already uses them
    "RUF001",  # allow Persian/Unicode text that may look ambiguous
    "RUF002",
    "RUF003",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120